Fix OL and UL text size, it was too small

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -387,7 +387,7 @@ p {
 	0 5px 6px 5px rgba(0,0,0,0.2);
     font-family: 'HuiFontP29';
     line-height:1.7em;
-    font-size:19px;
+    font-size:10pt;
     color:#130d6b;
 }
 
